--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -4,33 +4,77 @@
 
 
 
-    .todoContainer {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: center;
-      color: $primary-color;
-      margin: 2rem 0;
-      width: 100%;
-      min-height: 100vh;   
+.content {
+  position: relative;
+
+  .my_masonry_grid {
+    display: -webkit-box; /* Not needed if autoprefixing */
+    display: -ms-flexbox; /* Not needed if autoprefixing */
+    display: flex;
+    margin: 2rem auto; /* gutter size offset */
+    width: 90%;
+    min-height: 100vh;
+
+          @media (max-width: 600px) {
+              padding-left: -15px; /* gutter size offset */
+
     }
+
+          .my_masonry_grid_column {
+              padding-left: 10px; /* gutter size */
+              background-clip: padding-box;
+
+
+
+                  @media (max-width: 800px) {
+                    padding-left: 5px;
+                  }
+                 
+              
+                  @media (max-width: 600px) {
+                      margin-left: 0;
+                    
+                  }
+
+
+
+                    .my-masonry-grid_column > div {
+                      margin-bottom: 15px; /* space between items */
+                    }
+                  
+             
+
+          }
+  
+}
 
       .addTodoButtonContainer {
             position: fixed;
-            top: 70%;
+            top: 90%;
             right: 5%;
             z-index: 100;
+            height: 5rem;
+            width: 5rem;
             cursor: pointer;
 
 
               .addTodoButton {
+                position: relative;
                 background: transparent;
+                border: none;
                 border-radius: 50%;            
-                color: rgb(213, 13, 13);
-                height: 7rem;
-                width: 7rem;
+                color: red;
+                height: 5rem;
+                width: 5rem;
+                object-fit: cover;
+                transition: all 200ms ease-in;
+
+                    &:hover {
+                      color: $primary-color;
+                    }
               }
 
       }
 
-
+}
+  
