--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,10 @@
 @import '/utilities/_variables';    
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+:root {
+    $hidden: 'hidden',
+}
+
 body {
     background: $offwhite;
     margin: 0;
