--- a/utilities/_variables.scss
+++ b/utilities/_variables.scss
@@ -5,11 +5,12 @@ $offwhite: #F1F1F1;
 $shadeOfBlue: #3784c6;
 $error: rgba(255, 0, 0, 0.703);
 $ash: rgba(123, 123, 123, 0.809);
-$red: #fc3d39;
-$orange: #fd9426;
+$red: #FF5251;
+$orange: #d58128;
 $lightBlue: #5fc9f8;
-$darkBlue: #147efb;
+$darkBlue: #006CFF;
 $ashText: #303030;
+$hidden: 'hidden';
 
 
 $boxshadow: 2px 2px 5px rgba(120, 120, 120, 0.2);
