--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -13,7 +13,7 @@
     display: flex;
     margin: 2rem auto; /* gutter size offset */
     width: 90%;
-    min-height: 100vh;
+    min-height: calc(100vh - 30vh);
 
           @media (max-width: 600px) {
               padding-left: -15px; /* gutter size offset */
@@ -50,9 +50,9 @@
 
       .addTodoButtonContainer {
             position: fixed;
-            top: 90%;
+            top: 75%;
             right: 5%;
-            z-index: 100;
+            z-index: 90;
             height: 5rem;
             width: 5rem;
             cursor: pointer;
