--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -11,27 +11,29 @@
     min-height: 100px;
     
 
-    .navbarContainer {
-        // position: fixed;
-        top: 0;
-        background: $primary-color;
-        color: $white;
-        width: 100%;
-        height: 10vh;
-        z-index: 99;
-    }
+        .navbarContainer {
+            position: relative;
+            display: flex;
+            background: $primary-color;
+            color: $white;
+            width: 100%;
+            height: 10vh;
+            z-index: 99;
+        }
 
 
 
-    .footerContainer {
-        background: $primary-color;
-        color: $white;
-        width: 100%;
-        height: 10rem;
-    }
+        .footerContainer {
+            background: $primary-color;
+            color: $white;
+            width: 100%;
+            height: 10rem;
+        } 
 
     
 }
+
+
 
 
 
